Update top bar when basic view is changed
Also:
- Disable "save" button if no chart has been loaded
- Prevent saving files with an empty filename field

--- a/styles/basic-tab.css
+++ b/styles/basic-tab.css
@@ -45,6 +45,7 @@ input[type="text"].bv-item-value {
     box-sizing: border-box;
     outline: none;
     font-size: 1.25rem;
+    background: var(--color-main);
     transition: width 250ms ease-out;
 }
 
