--- a/components/button/button.css
+++ b/components/button/button.css
@@ -10,7 +10,13 @@
     text-align: center;
     color: var(--color-main);
     background: var(--color-bg);
+    cursor: pointer;
     transition: opacity 100ms ease-in-out, color 100ms ease-in-out, background 100ms ease-in-out;
+}
+
+.button:hover {
+    color: var(--color-bg);
+    background: var(--color-main);
 }
 
 .button.disabled {
