--- a/components/file-input/file-input.css
+++ b/components/file-input/file-input.css
@@ -1,5 +1,6 @@
 .file-input > label {
     display: block;
+    width: fit-content;
     padding-bottom: 0.25rem;
     font-size: 1.5rem;
     font-weight: bold;
