--- a/styles/json-view.css
+++ b/styles/json-view.css
@@ -1,4 +1,4 @@
-#tab1.active {
+#tab-json.active {
     display: block;
 }
 
@@ -7,6 +7,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    padding: 1rem;
     box-sizing: border-box;
     gap: 1rem;
 }
