--- a/styles/diagnostics-view.css
+++ b/styles/diagnostics-view.css
@@ -1,8 +1,8 @@
-#tab-diagnostics.active {
+#tab2.active {
     display: flex;
 }
 
-.dv.disabled > * {
+.dv.disabled * {
     opacity: 50%;
     pointer-events: none;
 }
