--- a/styles/json-view.css
+++ b/styles/json-view.css
@@ -1,4 +1,4 @@
-#tab-json.active {
+#tab1.active {
     display: block;
 }
 
@@ -7,7 +7,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 1rem;
     box-sizing: border-box;
     gap: 1rem;
 }
