--- a/styles/tab-manager.css
+++ b/styles/tab-manager.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
-    margin-right: 12rem;
 }
 
 .tab-buttons {
@@ -50,8 +49,13 @@
     left: 0;
     width: 100%;
     height: 100%;
+    padding: 1rem;
     border: 0.5rem solid var(--color-main);
     border-radius: 1rem;
     box-sizing: border-box;
     overflow: hidden;
+}
+
+#tab2.active {
+    display: block;
 }
