--- a/components/checkbox/checkbox.css
+++ b/components/checkbox/checkbox.css
@@ -2,11 +2,12 @@
     display: flex;
     align-items: center;
     gap: 1ch;
+    padding-top: 0.5rem;
 }
 
 .checkbox > label {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: bold;
 }
 
