cleanup accidental em instead of rem

--- a/styles/diagnostics-view.css
+++ b/styles/diagnostics-view.css
@@ -31,7 +31,7 @@
 .dv-box-title {
     text-align: center;
     font-weight: bold;
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 
 .dv-box-subtitle {
