--- a/styles/basic-view.css
+++ b/styles/basic-view.css
@@ -3,10 +3,19 @@
     flex-direction: row;
 }
 
+@media screen and (max-width: 900px) {
+    #tab0.active {
+        display: inline;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+}
+
 .bv0 {
     display: flex;
     flex-direction: column;
     flex: 2 1 0;
+    min-height: 12rem;
     overflow: hidden;
     overflow-x: hidden;
 }
@@ -64,12 +73,12 @@
     align-items: center;
     gap: 1rem;
     flex: 2 1 0;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .bv2 > img {
-    width: 16rem;
-    height: 16rem;
+    max-width: 16rem;
+    max-height: 16rem;
 }
 
 .bv0.disabled > #bv-categories > *, .bv1.disabled > #bv-diffs > *, .bv2.disabled > *{
