--- a/styles/basic-view.css
+++ b/styles/basic-view.css
@@ -17,7 +17,6 @@
     flex: 2 1 0;
     min-height: 12rem;
     overflow: hidden;
-    overflow-x: hidden;
 }
 
 .bv0 .checkbox > input {
@@ -28,6 +27,7 @@
     display: flex;
     gap: 4rem;
     padding: 1rem 1rem 2rem 1rem;
+    overflow: hidden;
 }
 
 #bv-categories {
