--- a/styles/top-bar.css
+++ b/styles/top-bar.css
@@ -1,5 +1,6 @@
 .top-bar {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 2rem;
@@ -43,4 +44,10 @@
 
 #tb-file-input {
     display: none;
+}
+
+@media screen and (max-width: 900px) {
+    .top-bar {
+        flex-direction: column;
+    }
 }
