--- a/styles/bottom-bar.css
+++ b/styles/bottom-bar.css
@@ -1,6 +1,16 @@
 .bottom-bar {
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
+}
+
+@media screen and (max-width: 720px) {
+    .bottom-bar {
+        flex-direction: column;
+    }
+    .bb1 {
+        padding-top: 0.25rem;
+    }
 }
 
 .bb span {
