--- a/styles/toast.css
+++ b/styles/toast.css
@@ -16,13 +16,42 @@
     display: flex;
     flex-direction: column;
     border: 2px solid var(--color-main);
-    border-radius: 2px;
+    border-radius: 4px;
     padding: 0.25rem;
     margin-top: 0.5rem;
     pointer-events: all;
-    z-index: 5000;
+    z-index: 9;
     cursor: pointer;
+
+    -webkit-animation: fadein 0.5s;
+    animation: fadein 0.5s;
 }
+
+.fadeout {
+    -webkit-animation: fadeout 0.25s;
+    animation: fadeout 0.25s;
+}
+
+@-webkit-keyframes fadein {
+  from {left: 30px; opacity: 0;}
+  to {left: 0px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {left: 30px; opacity: 0;}
+  to {left: 0px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
 
 .toast-title {
     font-size: 1.5rem;
@@ -38,12 +67,11 @@
 }
 
 .warning {
-    background-color: #BA2;
-    color: #000;
+    background-color: #872;
 }
 
 .success {
-    background-color: #2B2;
+    background-color: #191;
 }
 
 .info {
