--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ input[type="file"] {
     display: inline-block;
     text-align: center;
     font-size: 0.5em;
-    border: 2px solid var(--color-main);
+    border: 2px solid;
     border-radius: 100px;
     width: 1em;
 }
