--- a/styles/main.css
+++ b/styles/main.css
@@ -39,13 +39,13 @@ input[type="file"] {
 }
 
 .hint {
-    position: absolute;
-    margin-top: 0.3em;
+    vertical-align: -10%;
+    font-size: 0.75em;
     margin-left: 0.25rem;
     --webkit-mask-image: url(../assets/icons/hint.svg);
     mask-image: url(../assets/icons/hint.svg);
-    --webkit-mask-size: 0.75em;
-    mask-size: 0.75em;
+    --webkit-mask-size: 1em;
+    mask-size: 1em;
     mask-repeat: no-repeat;
     background: currentColor;
 }
