--- a/components/number-input/number-input.css
+++ b/components/number-input/number-input.css
@@ -16,6 +16,7 @@
     outline: none;
     font-size: 1rem;
     background: var(--color-main);
+    color: var(--color-bg);
     transition: width 250ms ease-out;
 }
 
