--- a/components/text-input/text-input.css
+++ b/components/text-input/text-input.css
@@ -15,6 +15,7 @@
     outline: none;
     font-size: 1rem;
     background: var(--color-main);
+    color: var(--color-bg);
     transition: width 250ms ease-out;
 }
 
