--- a/styles/diagnostics-view.css
+++ b/styles/diagnostics-view.css
@@ -37,7 +37,7 @@
 
 .dv-warning {
     text-align: center;
-    font-weight:normal;
+    font-weight: normal;
     font-size: 1rem;
     color: #CC0000;
 }
@@ -49,7 +49,7 @@
 
 .dv-utils {
     display: flex;
-    flex-direction: horizontal;
+    flex-flow: row wrap;
     gap: 1rem;
     padding-left: 1rem;
     background: var(--color-bg);
