--- a/styles/top-bar.css
+++ b/styles/top-bar.css
@@ -18,6 +18,7 @@
     justify-content: center;
     height: 5.5rem;
     overflow: hidden;
+    user-select: text;
 }
 
 .tb-chart > div, .tb-filename {
