--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,7 @@ input[type="file"] {
 }
 
 .icon-check, .icon-comment, .icon-warn, .icon-alert {
+    /* font-weight: 500; */
     display: inline-block;
     width: 1.25em;
     border-radius: 1rem;
