consistent(ish) checking for invisible note alignment
now much better at figuring out where the player should be
now checks invisible/offtrack stacks besides 4-lane stacks

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -184,11 +184,15 @@ input.merge-faded, .merge-faded input  {
 }
 
 .s1 {
-    color: #DB0;
+    color: #DB5;
 }
 
 .s2 {
-    color: #B00;
+    color: #F72;
+}
+
+.s3 {
+    color: #F22;
 }
 
 .diag-type {
