--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ input[type="file"] {
     mask-image: url(../assets/icons/hint.svg);
 }
 
-.icon-check, .icon-comment, .icon-warn, .icon-alert {
+.icon-check, .icon-comment, .icon-warn, .icon-warn2, .icon-alert {
     /* font-weight: 500; */
     display: inline-block;
     width: 1.25em;
@@ -68,9 +68,13 @@ input[type="file"] {
 }
 
 .icon-warn {
-    background: #860;
+    background: #982;
+}
+
+.icon-warn2 {
+    background: #A50;
 }
 
 .icon-alert {
-    background: #600;
+    background: #800;
 }
