--- a/styles/popup.css
+++ b/styles/popup.css
@@ -96,6 +96,10 @@
     #merge-checkbox-container {
         column-gap: 1rem;
     }
+    #popup-content {
+        align-content: start;
+        align-self: start;
+    }
 }
 
 @media screen and (max-width: 400px) {
@@ -165,9 +169,11 @@ input.merge-faded, .merge-faded input  {
 
 .diag-desc { 
     display: inline-block;
-    padding-bottom: 1rem;
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
     font-size: 0.875rem;
     opacity: 75%;
+    text-align: center;
 }
 
 .diag-entry {
@@ -183,6 +189,20 @@ input.merge-faded, .merge-faded input  {
     border: 2px solid currentColor;
     border-radius: 10px;
     text-align: center;
+    vertical-align: middle;
+}
+
+.diag-type {
+    text-align: left;
+    display: inline-block;
+    width: 20rem;
+    vertical-align: middle;
+}
+
+.diag-time {
+    text-align: left;
+    display: inline-block;
+    width: 10rem;
     vertical-align: middle;
 }
 
@@ -204,18 +224,4 @@ input.merge-faded, .merge-faded input  {
 .s3 {
     color: #F22;
     background: #F221;
-}
-
-.diag-type {
-    text-align: left;
-    display: inline-block;
-    width: 20rem;
-    vertical-align: middle;
-}
-
-.diag-time {
-    text-align: left;
-    display: inline-block;
-    width: 10rem;
-    vertical-align: middle;
 }
